0026739: Problem with generate Qt samples

Generation of project files was fixed.