samples/qt/IESample/env.sh
@@ -1,19 +1,17 @@
-#!/bin/sh
+#!/bin/bash
 
-if [ -e "${aSamplePath}/custom.sh" ]; then source "${aSamplePath}/custom.sh"; fi
+export aSamplePath="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
 
-if test "${CASROOT}" == ""; then
-   echo "Environment variable \"CASROOT\" not defined. Define it in \"custom.sh\" script."
-   exit 1
+if [ -e "custom.sh" ]; then
+   source "custom.sh";
 fi
 
-if test "${QTDIR}" == ""; then
-   echo "Environment variable \"QTDIR\" not defined. Define it in \"custom.sh\" script."
-   exit 1
+if [ -e "${aSamplePath}/../../../env.sh" ]; then
+   source "${aSamplePath}/../../../env.sh";
 fi
 
-if test `uname -s` == "Darwin" && test "${WOKHOME}" == ""; then
-   echo "Environment variable \"WOKHOME\" not defined. Define it in \"custom.sh\" script."
+if test "${QT_DIR}" == ""; then
+   echo "Environment variable \"QT_DIR\" not defined. Define it in \"custom.sh\" script."
    exit 1
 fi
 
@@ -21,7 +19,4 @@ host=`uname -s`
 export STATION=$host
 export RES_DIR=${aSamplePath}/${STATION}/res
 
-export PATH=${QTDIR}/bin:${PATH}
-
-source $CASROOT/env.sh
-export CSF_OPT_INC="${CASROOT}/inc:${WOKHOME}/lib:${CSF_OPT_INC}"
+export PATH=${QT_DIR}/bin:${PATH}
