samples/qt/Tutorial/Tutorial.pro
@@ -3,7 +3,7 @@ CONFIG += debug_and_release qt
 
 TARGET = Tutorial
 
-SAMPLESROOT = $$(SAMPLESROOT)
+SAMPLESROOT = $$quote($$(CASROOT)/samples/qt)
 
 HEADERS   = src/*.h \
             $${SAMPLESROOT}/Common/src/*.h \
@@ -25,6 +25,7 @@ RES_DIR   = $$quote($$(RES_DIR))
 
 INCLUDEPATH += $$quote($${SAMPLESROOT}/Common/src)
 INCLUDEPATH += $$quote($${SAMPLESROOT}/Interface/src)
+INCLUDEPATH += $$quote($$(CASROOT)/inc)
 
 OCCT_DEFINES = $$(CSF_DEFINES)
 
@@ -32,21 +33,18 @@ DEFINES = $$split(OCCT_DEFINES, ;)
 
 unix {
     UNAME = $$system(uname -s)
-    INCLUDES = $$(CSF_OPT_INC)
-    PATHS = $$split(INCLUDES,":")
-    for(path, PATHS):INCLUDEPATH += $${path}
     LIBLIST = $$(LD_LIBRARY_PATH)
     LIBPATHS = $$split(LIBLIST,":")
     for(lib, LIBPATHS):LIBS += -L$${lib}
 
     CONFIG(debug, debug|release) {
-	DESTDIR = ./$$UNAME/bind
-	OBJECTS_DIR = ./$$UNAME/objd
-	MOC_DIR = ./$$UNAME/mocd
+        DESTDIR = ./$$UNAME/bind
+        OBJECTS_DIR = ./$$UNAME/objd
+        MOC_DIR = ./$$UNAME/mocd
     } else {
-	DESTDIR = ./$$UNAME/bin
-	OBJECTS_DIR = ./$$UNAME/obj
-	MOC_DIR = ./$$UNAME/moc
+        DESTDIR = ./$$UNAME/bin
+        OBJECTS_DIR = ./$$UNAME/obj
+        MOC_DIR = ./$$UNAME/moc
     }
 
     MACOSX_USE_GLX = $$(MACOSX_USE_GLX)
@@ -58,33 +56,22 @@ unix {
     !macx | equals(MACOSX_USE_GLX, true): LIBS += -L$$QMAKE_LIBDIR_X11 $$QMAKE_LIBS_X11 -L$$QMAKE_LIBDIR_OPENGL $$QMAKE_LIBS_OPENGL $$QMAKE_LIBS_THREAD
     LIBS += -lfreeimageplus
     LIBS += -ltbb -ltbbmalloc
+    QMAKE_CXXFLAGS += -std=gnu++11
 }
 
 win32 {
-    INCLUDES = $$(CSF_OPT_INC)
-    PATHS = $$split(INCLUDES,";")
-    for(path, PATHS):INCLUDEPATH += $${path}
-
     CONFIG(debug, debug|release) {
-	DEFINES += _DEBUG
-	DESTDIR = ./win$(ARCH)/$(VCVER)/bind
-	OBJECTS_DIR = ./win$(ARCH)/$(VCVER)/objd
-	MOC_DIR = ./win$(ARCH)/$(VCVER)/mocd
-	!contains(QMAKE_HOST.arch, x86_64) {
-	    LIBS = -L$(CSF_OPT_LIB32D)
-	} else {
-	    LIBS = -L$(CSF_OPT_LIB64D)
-	}
+        DEFINES += _DEBUG
+        DESTDIR = ./win$(ARCH)/$(VCVER)/bind
+        OBJECTS_DIR = ./win$(ARCH)/$(VCVER)/objd
+        MOC_DIR = ./win$(ARCH)/$(VCVER)/mocd
+        LIBS = -L$$(QT_DIR)/lib;$$(CASROOT)/win$$(ARCH)/$$(VCVER)/libd
     } else {
-	DEFINES += NDEBUG
-	DESTDIR = ./win$(ARCH)/$(VCVER)/bin
-	OBJECTS_DIR = ./win$(ARCH)/$(VCVER)/obj
-	MOC_DIR = ./win$(ARCH)/$(VCVER)/moc
-	!contains(QMAKE_HOST.arch, x86_64) {
-	    LIBS = -L$(CSF_OPT_LIB32)
-	} else {
-	    LIBS = -L$(CSF_OPT_LIB64)
-	}
+        DEFINES += NDEBUG
+        DESTDIR = ./win$(ARCH)/$(VCVER)/bin
+        OBJECTS_DIR = ./win$(ARCH)/$(VCVER)/obj
+        MOC_DIR = ./win$(ARCH)/$(VCVER)/moc
+        LIBS = -L$$(QT_DIR)/lib;$$(CASROOT)/win$$(ARCH)/$$(VCVER)/lib
     }
     DEFINES +=WNT WIN32 NO_COMMONSAMPLE_EXPORTS NO_IESAMPLE_EXPORTS
 }
