samples/qt/Tutorial/custom.bat
@@ -1,0 +1,4 @@
+@echo off
+rem Define QT_DIR variables in order to load OCCT environment
+
+set "QT_DIR="
