samples/qt/Tutorial/custom.sh
@@ -1,10 +1,4 @@
-#!/bin/sh
+#!/bin/bash
+#Define QT_DIR variables in order to generate Makefile files by qmake
 
-#Define CASROOT and QTDIR variables in order to generate Makefile files by qmake.
-#If you are using Mac OS X it is necessary to define WOKHOME as a path to your WOK installation directory.
-
-export CASROOT=""
-
-export QTDIR=""
-
-export WOKHOME=""
+export QT_DIR=""
