samples/qt/Tutorial/env.bat
@@ -1,6 +1,11 @@
+@echo off
+
+call "custom.bat" %1 %2 %3
+
 call "%~dp0..\..\..\env.bat" %1 %2 %3
 
-SET "SAMPLESROOT=%~dp0.."
-SET "RES_DIR=%~dp0win%ARCH%\%VCVER%\res"
-SET "CSF_ResourcesDefaults=%RES_DIR%"
-SET "CSF_TutorialResourcesDefaults=%RES_DIR%"
+set "RES_DIR=%~dp0win%ARCH%\%VCVER%\res"
+set "CSF_ResourcesDefaults=%RES_DIR%"
+set "CSF_TutorialResourcesDefaults=%RES_DIR%"
+
+set "PATH=%QT_DIR%/bin;%PATH%"
