samples/qt/Tutorial/make.sh
@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/bin/bash
 
 export aSamplePath="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
 if [ -e "${aSamplePath}/env.sh" ]; then source "${aSamplePath}/env.sh"; fi
